--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -8,7 +8,7 @@
        <a href="/board/write">글쓰기</a>
        <h1> 글 목록 페이지 </h1>
 
-
+       <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
        <script src="/js/board/list.js"></script>
 </body>
 </html>
