--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,16 +9,13 @@
 
 <a href="/"><button type="button">메인페이지</button></a>
 <div class="headerbox">
-    <!-- 로그인 전에 보이는 버튼 -->
-    <a href="/member/signup"><button type="button" >회원가입</button></a>
-    <a href="/member/login"><button type="button">로그인</button></a>
-    <!-- 로그인 후에 보이는 버튼 -->
-        <a href="/member/logout"> <button type="button">로그아웃</button></a>
-        <a href="/member/signup"> <button type="button">비밀번호찾기</button></a>
-        <a href="/member/findpassword"><button type="button">비밀번호수정</button></a>
-        <a href="/member/delete"> <button type="button" >회원탈퇴</button></a>
+
     </div>
+
+
+<!-- Link to open the modal -->
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="/js/index.js"></script>
+
 </body>
 </html>
