--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,13 @@
 <a href="/"><button type="button">메인페이지</button></a>
 <div class="headerbox">
 
-    </div>
+</div>
+<table class="mtable">
+    <tr>
+        <th>번호</th><th>이메일</th><th>비밀번호</th>
+    </tr>
+
+</table>
 
 
 <!-- Link to open the modal -->
