--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -7,8 +7,16 @@
 <body>
 
 <h3>회원가입</h3>
-
+<div>
 이메일 : <input type="memail" class="memail"><br>
+<button type="button" onclick="getauth()" class="getauthbtn">인증코드받기</button><br>
+    <div class="authbox">
+        <input type="text" class="authinput">
+        <button type="button" class="authbtn" onclick="authcode()">인증</button>
+        <span class="timerbox"></span>
+    </div>
+</div>
+전화번호 : <input type="mphone" class="mphone"><br>
 비밀번호 : <input type="mpassword" class="mpassword"><br>
 <button type="button" onclick="setmember()">가입하기</button>
 
