--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -10,6 +10,7 @@
         <form>
             제목 : <input type="text" class="btitle">
             내용 : <input type="text" class="bcontent">
+            첨부파일 : <input type="text" class="bfile">
             <button type="button" onclick="setboard()">글등록</button>
         </form>
 
