--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -16,7 +16,7 @@
         <span class="timerbox"></span>
     </div>
 </div>
-전화번호 : <input type="mphone" class="mphone"><br>
+핸드폰 : <input type="mphone" class="mphone"><br>
 비밀번호 : <input type="mpassword" class="mpassword"><br>
 <button type="button" onclick="setmember()">가입하기</button>
 
