--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -5,8 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-       <a href="/board/write">글쓰기</a>
-       <h1> 글 목록 페이지 </h1>
+        <div class="writebtn">
+       <a href="/board/write"><button type="button">글쓰기</button> </a>
+        </div>
+            <h1> 글 목록 페이지 </h1>
+
+            <table class="btable">
+
+
+            </table>
 
        <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
        <script src="/js/board/list.js"></script>
