비회원게시판

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -9,7 +9,7 @@
        <a href="/board/write"><button type="button">글쓰기</button> </a>
         </div>
             <h1> 글 목록 페이지 </h1>
-
+            <div class="bcategorybox"></div>
             <table class="btable">
 
 
