--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -8,7 +8,7 @@
         <h1>글쓰기 페이지</h1>
 
         <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추카</button>
-        <span class="bccategorybox"></span>
+        <span class="bcategorybox"></span>
         <form>
             제목 : <input type="text" class="btitle">
             내용 : <input type="text" class="bcontent">
