--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,8 @@
 
 <a href="/"><button type="button">메인페이지</button></a>
 <a href="/board/list"><button>게시판</button></a>
+<a href="/board/setgboard"><button>비회원 방문록</button></a>
+
 <div class="headerbox">
 
 </div>
