--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -7,7 +7,7 @@
 <body>
         <h1>글쓰기 페이지</h1>
 
-        <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추카</button>
+        <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추가</button>
         <span class="bcategorybox"></span>
         <form>
             제목 : <input type="text" class="btitle">
