--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 
-
+<form>
 <a href="/"><button type="button">메인페이지</button></a>
 <a href="/board/list"><button>게시판</button></a>
-<a href="/board/setgboard"><button>비회원 방문록</button></a>
-
+<a href="/board/gboard"><button>비회원 방문록</button></a>
+</form>
 <div class="headerbox">
 
 </div>
