첨부파일 다운로드

--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,10 +9,10 @@
 
         <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추가</button>
         <span class="bcategorybox"></span>
-        <form>
-            제목 : <input type="text" class="btitle">
-            내용 : <input type="text" class="bcontent">
-            첨부파일 : <input type="text" class="bfile">
+        <form class="boardform">
+            제목 : <input type="text" name="btitle">
+            내용 : <input type="text" name="bcontent">
+            첨부파일 : <input type="file" name="bfile">
             <button type="button" onclick="setboard()">글등록</button>
         </form>
 
