--- a/src/main/resources/templates/react/index.html
+++ b/src/main/resources/templates/react/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>이젠의 블로그에 오신 여러분을 환영합니다.!</h1>
+    <h1>이젠의 블로그에 오신 여러분을 환영합니다!</h1>
 
     <div id="root"></div>
 
