로그인/로그아웃

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,10 +7,11 @@
 <body>
 
   <h3>로그인</h3>
-  이메일 : <input type="text" class="memail"><br>
-  비밀번호 : <input type="text" class="mpassword"><br>
-  <button type="button" onclick="getmember()">로그인</button>
-
+  <form action="/member/getmember" method="post">
+  이메일 : <input type="text" name="memail" class="memail"><br>
+  비밀번호 : <input type="password" name="mpassword" class="mpassword"><br>
+  <input type="submit" value="로그인">
+  </form>
   <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="/js/member/login.js"></script>
 </body>
