--- a/src/main/frontend/src/css/Header.css
+++ b/src/main/frontend/src/css/Header.css
@@ -1,3 +1,26 @@
-.header_name{ color:red;}
 
 .logo{width: 10%;}
+
+ul{ list-style-type: none;}
+
+a{ color : black;  text-decoration: none; outline: none; }
+
+.webbox{
+    width: 1000px;
+    margin : 0 auto;
+}
+
+.header{
+    display : flex;
+    justify-content: space-between;
+}
+
+.top_menu{
+    display : flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.top_menu li{ margin-left: 20px;}
+
+
+
